Fix position of "Optional" label on small screens

--- a/src/pretix/static/pretixcontrol/scss/_forms.scss
+++ b/src/pretix/static/pretixcontrol/scss/_forms.scss
@@ -245,6 +245,11 @@ label .optional {
   color: $text-muted;
   font-weight: normal;
 }
+@media (max-width: $screen-sm-max) {
+  .form-horizontal .control-label {
+    text-align: left;
+  }
+}
 
 div.scrolling-multiple-choice {
   height: 150px;
